<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:id="@+id/scrollView3"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="1dp"
        android:layout_marginTop="1dp"
        android:layout_marginEnd="1dp"
        android:layout_marginBottom="1dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <TextView

                android:id="@+id/textView7"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorGood"
                android:gravity="center"
                android:textSize="16sp"
                android:shadowColor="@android:color/background_dark"
                android:shadowDx="2"
                android:shadowDy="2"
                android:shadowRadius="3"
                android:textStyle="bold"
                android:text="@string/good_aqi_desc"
                android:textColor="@android:color/background_light" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="1dp" />

            <TextView
                android:id="@+id/textView11"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textStyle="bold"
                android:textSize="16sp"
                android:shadowColor="@android:color/background_dark"
                android:shadowDx="2"
                android:shadowDy="2"
                android:shadowRadius="3"
                android:background="@color/colorModerate"
                android:text="@string/moderate_aqi_desc"
                android:textColor="@android:color/background_light" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="1dp" />

            <TextView
                android:id="@+id/textView12"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textStyle="bold"
                android:textSize="16sp"
                android:shadowColor="@android:color/background_dark"
                android:shadowDx="2"
                android:shadowDy="2"
                android:shadowRadius="3"
                android:background="@color/colorUnhealthyFor"
                android:text="@string/unhealthy_for_aqi_desc"
                android:textColor="@android:color/background_light" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="1dp" />

            <TextView
                android:id="@+id/textView13"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textStyle="bold"
                android:textSize="16sp"
                android:shadowColor="@android:color/background_dark"
                android:shadowDx="2"
                android:shadowDy="2"
                android:shadowRadius="3"
                android:background="@color/colorUnhealthy"
                android:text="@string/unhealthy_aqi_desc"
                android:textColor="@android:color/background_light" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="1dp" />

            <TextView
                android:id="@+id/textView14"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textStyle="bold"
                android:textSize="16sp"
                android:shadowColor="@android:color/background_dark"
                android:shadowDx="2"
                android:shadowDy="2"
                android:shadowRadius="3"
                android:background="@color/colorVeryUnhealthy"
                android:text="@string/very_unhealthy_aqi_desc"
                android:textColor="@android:color/background_light" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="1dp" />

            <TextView
                android:id="@+id/textView15"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textStyle="bold"
                android:textSize="16sp"
                android:shadowColor="@android:color/background_dark"
                android:shadowDx="2"
                android:shadowDy="2"
                android:shadowRadius="3"
                android:background="@color/colorHazardous"
                android:text="@string/hazardous_aqi_desc"
                android:textColor="@android:color/background_light" />
        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>